--- a/Rosovina/Modules/Checkout/Views/CheckoutView.xib
+++ b/Rosovina/Modules/Checkout/Views/CheckoutView.xib
@@ -26,6 +26,7 @@
                 <outlet property="deliveryDateView" destination="REP-VC-UJf" id="q98-nV-33A"/>
                 <outlet property="deliveryFeeLabel" destination="mEJ-oe-8La" id="rJD-to-VdE"/>
                 <outlet property="payButton" destination="Yhi-7t-V0j" id="4QP-Xh-hYr"/>
+                <outlet property="paymentMethodsContainer" destination="BeH-dE-SkV" id="gpt-ou-ZRi"/>
                 <outlet property="recipientNameTextField" destination="w3d-s4-RUx" id="x7v-Iq-Vrw"/>
                 <outlet property="recipientNameView" destination="7PP-mE-z6F" id="ctF-2E-H1I"/>
                 <outlet property="recipientPhoneErrorMessage" destination="NXc-4W-x4Q" id="uiz-FB-B1b"/>
@@ -131,10 +132,10 @@
                     <rect key="frame" x="0.0" y="216" width="393" height="1054"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="krH-AQ-7wZ">
-                            <rect key="frame" x="0.0" y="8" width="393" height="1059.5"/>
+                            <rect key="frame" x="0.0" y="8" width="393" height="1074.5"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="17d-Pe-bp7">
-                                    <rect key="frame" x="24" y="8" width="345" height="1043.5"/>
+                                    <rect key="frame" x="24" y="8" width="345" height="1058.5"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pkU-2l-Dyg">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="207"/>
@@ -422,7 +423,7 @@
                                             </constraints>
                                         </view>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="3p3-3v-SVn">
-                                            <rect key="frame" x="0.0" y="659.5" width="345" height="133.5"/>
+                                            <rect key="frame" x="0.0" y="659.5" width="345" height="148.5"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rDa-gF-ZlG">
                                                     <rect key="frame" x="0.0" y="0.0" width="68.5" height="19.5"/>
@@ -430,8 +431,15 @@
                                                     <color key="textColor" red="0.21176470589999999" green="0.2156862745" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="2xj-cR-I33">
-                                                    <rect key="frame" x="0.0" y="38.5" width="222" height="95"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BeH-dE-SkV">
+                                                    <rect key="frame" x="0.0" y="38.5" width="345" height="110"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="110" id="6CO-BN-spS"/>
+                                                    </constraints>
+                                                </view>
+                                                <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="2xj-cR-I33">
+                                                    <rect key="frame" x="0.0" y="148.5" width="333" height="95"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qTR-vt-q6f">
                                                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="95"/>
@@ -520,8 +528,8 @@
                                                                 <constraint firstItem="dCi-wy-U3D" firstAttribute="top" secondItem="nqf-cg-Aix" secondAttribute="top" constant="10" id="yXg-Te-dZZ"/>
                                                             </constraints>
                                                         </view>
-                                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZlY-0w-EfP">
-                                                            <rect key="frame" x="222" y="0.0" width="95" height="95"/>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZlY-0w-EfP">
+                                                            <rect key="frame" x="238" y="0.0" width="95" height="95"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tamara" translatesAutoresizingMaskIntoConstraints="NO" id="P0W-bV-YRo">
                                                                     <rect key="frame" x="10" y="10" width="75" height="75"/>
@@ -542,9 +550,13 @@
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="BeH-dE-SkV" secondAttribute="trailing" id="COK-xJ-SOf"/>
+                                                <constraint firstItem="BeH-dE-SkV" firstAttribute="leading" secondItem="3p3-3v-SVn" secondAttribute="leading" id="fq4-1d-1la"/>
+                                            </constraints>
                                         </stackView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="bPe-Lc-cU2">
-                                            <rect key="frame" x="0.0" y="815" width="345" height="228.5"/>
+                                            <rect key="frame" x="0.0" y="830" width="345" height="228.5"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rmQ-8S-xR2">
                                                     <rect key="frame" x="0.0" y="0.0" width="145" height="19.5"/>
