--- a/Rosovina/Modules/ForgetPassword/Views/ForgetPasswordView.xib
+++ b/Rosovina/Modules/ForgetPassword/Views/ForgetPasswordView.xib
@@ -20,7 +20,7 @@
                 <outlet property="passwordEye" destination="4Ot-Xj-m6T" id="WPD-AC-OHo"/>
                 <outlet property="passwordTextField" destination="fkC-8V-tsS" id="5dX-hx-dGw"/>
                 <outlet property="retypeErrorMessage" destination="gEt-ey-a9S" id="KAm-Gl-8e0"/>
-                <outlet property="retypeView" destination="YAo-xs-Dd1" id="t1x-OR-WmH"/>
+                <outlet property="retypeView" destination="NFN-X1-PA4" id="2Ia-3b-LC4"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
