--- a/Rosovina/Modules/Checkout/Views/CheckoutView.xib
+++ b/Rosovina/Modules/Checkout/Views/CheckoutView.xib
@@ -140,17 +140,20 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pkU-2l-Dyg">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="207"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="223" translatesAutoresizingMaskIntoConstraints="NO" id="YDC-lz-pJw">
+                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YDC-lz-pJw">
                                                     <rect key="frame" x="0.0" y="0.0" width="345" height="29"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saved Addresses" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O2a-Lp-gYF">
-                                                            <rect key="frame" x="0.0" y="0.0" width="345" height="29"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="255" height="29"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                             <color key="textColor" red="0.21176470589999999" green="0.2156862745" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iz2-bZ-GqD">
-                                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="29"/>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iz2-bZ-GqD">
+                                                            <rect key="frame" x="255" y="0.0" width="90" height="29"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="90" id="kxf-bd-hWR"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                             <state key="normal" title="+ Add new">
